# APEX

./: .coverage  .cspell.json  .devcontainer.json  .dockerignore  .env.example  .gitignore  .last-check  .lycheerc.toml  .markdownlint.json  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  __next.__PAGE__.txt  __next._full.txt  __next._index.txt  __next._tree.txt  _not-found.txt  activity.html  activity.txt  agents.html  contribute.html  docs.html  docs.txt  index.html  install.html  install.ps1  install.sh  install.txt  mkdocs.yml  models.html  models.txt  next.config.ts  (+10 more)
.apex/agents/: explore.md  scout.md
.apex/commands/: commit.md  docs.md  review.md  test.md
.github/: FUNDING.yml  dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  commitlint.yml  coverage.yml  deploy-website.yml  docker-ci.yml  docs.yml  labeler.yml  link-check.yml  markdown-lint.yml  performance.yml  pr-checks.yml  release-drafter.yml  release.yml  security.yml  spellcheck.yml  stale.yml  tui.yml  website.yml
Formula/: apex-agent.rb  apex-ai.rb
_next/static/MVQ7y0f48wdGhEW5PzwpT/: _buildManifest.js
_next/static/chunks/: 255-adbeef9524552869.js  348-ba276d61814e72f1.js  679-df2bea76282e90d7.js  750-a74877320c446359.js  794-c3e889f009329721.js  main-5ffe626d0024b72c.js  main-app-8c115edf7517454b.js  webpack-1cbe421bdad216b1.js
_next/static/css/: a396b8f900f39353.css  bd2f3a2c92f648b7.css
_not-found/: __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
activity/: __next._tree.txt  __next.activity.__PAGE__.txt  __next.activity.txt
agents/: __next._full.txt  __next._tree.txt  __next.agents.__PAGE__.txt
apex/: __init__.py  __init__.py,cover  __main__.py  __main__.py,cover  advanced.py  advanced.py,cover  agent.py  agents.py  agents.py,cover  api_key.py  api_key.py,cover  billing.py  billing.py,cover  codegen.py  codegen.py,cover  commands.py  commands.py,cover  commands_manager.py  commands_manager.py,cover  config.py  config.py,cover  config_tools.py  config_tools.py,cover  config_v2.py  config_v2.py,cover  context.py  context.py,cover  context_manager.py  context_manager.py,cover  context_tracking.py  context_tracking.py,cover  cost_local.py  cost_local.py,cover  extras.py  extras.py,cover  formatter.py  formatter.py,cover  git_undo.py  git_undo.py,cover  github_integration.py  (+84 more)
apex/gateway/: __init__.py  auth.py  config.py  router.py  server.py
apex/tui/: __init__.py
apex/tui/components/: __init__.py  base.py  command_palette.py  dialog.py  status_bar.py  (+1 more)
apex/tui_skeleton/: app.py
apex/widgets/: __init__.py  chat.py  cmd_palette.py  dialogs.py  header.py  input_bar.py  messages.py  sidebar.py  status.py
apex_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
contribute/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.contribute.__PAGE__.txt
docs/: __next._tree.txt  __next.docs.__PAGE__.txt  advanced.md  agents.md  api.md  changelog.md  commands.md  configuration.md  contributing.md  examples.md  index.md  installation.md  models.md  plugins.md  quickstart.md  tools.md  troubleshooting.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: custom-agents.md  custom-commands.md  models.md  themes.md  tips.md  tools.md  tui.md
docs/reference/: api.md  cli.md  config.md  http-api.md
download/: deepseek-tui.json
install/: __next._tree.txt  __next.install.__PAGE__.txt
models/: __next._tree.txt  __next.models.__PAGE__.txt
prisma/: schema.prisma
roadmap/: __next._full.txt  __next._tree.txt  __next.roadmap.__PAGE__.txt
scripts/: generate_models.py  install.ps1  install.sh
security/: __next._tree.txt  __next.security.__PAGE__.txt
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ProviderIcons.tsx  github-icon.tsx
src/lib/: github-api.ts  version.ts
tests/: __init__.py  test_advanced.py  test_agent.py  test_agent_coverage.py  test_agent_full.py  test_agent_more.py  test_agents.py  test_api_key.py  test_billing.py  test_codegen.py  test_codegen_full.py  test_commands.py  test_commands_manager.py  test_config.py  test_config_tools.py  test_config_v2.py  test_context.py  test_context_manager.py  test_context_tracking.py  test_cost_local.py  test_extras.py  test_extras_full.py  test_formatter.py  test_git_undo.py  test_github_integration.py  test_http_api.py  test_http_api_security.py  test_i18n.py  test_lsp_diagnostics.py  test_main.py  test_main_full.py  test_main_more.py  test_mcp.py  test_mcp_full.py  test_memory.py  test_mentions.py  test_modular_tools.py  test_new_tools.py  test_permission.py  test_plugins_full.py  (+47 more)
tests/gateway/: test_auth.py  test_config.py  test_router.py
tools/: __next._tree.txt  __next.tools.__PAGE__.txt
tui-frontend/: README.md  bun.lockb  index.ts  package-lock.json  package.json  tsconfig.json
tui-frontend/src/: App.tsx  sync.ts
(+53 files in other folders)
