[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-agent"
version = "0.1.0"
description = "The last coding agent you'll ever need"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "APEX Team", email = "apex@example.com"}
]
keywords = ["ai", "coding", "agent", "llm", "litellm", "claude", "gpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Software Assistants",
]
dependencies = [
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
apex = "apex.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mkdocs-material>=8.0.0",
]

[project.urls]
Homepage = "https://apex-ai.dev"
Repository = "https://github.com/apex-ai/apex"
Documentation = "https://apex-ai.dev/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex*"]

[tool.setuptools.package-data]
apex = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["apex"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]