[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-ai"
version = "2.0.0"
description = "Universal AI coding agent — every model, one terminal"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Ggboykxz", email = "ggboykxz@gmail.com"}
]
keywords = [
    "ai", "coding-agent", "llm", "terminal", "cli",
    "anthropic", "openai", "gemini", "ollama",
    "developer-tools", "code-generation", "chatgpt",
    "claude-code-alternative", "opencode-alternative", "aider-alternative",
    "coding-assistant", "ai-programmer", "terminal-ai",
    "litellm-client", "multi-model-ai", "local-ai-agent",
    "gpt-4", "claude-3", "llama", "mistral", "deepseek",
    "groq", "qwen", "coding-copilot", "ai-pair-programmer"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40.0,<2.0.0",
    "rich>=13.7.0,<16.0.0",
    "prompt-toolkit>=3.0.43,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0,<7.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "pyperclip>=1.8.0,<3.0.0",
    "click>=8.1.0,<9.0.0",
    "cryptography>=42.0.0,<45.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "mkdocs-material>=8.0.0",
    "mkdocs-git-revision-date-localized-plugin",
]

[project.scripts]
apex = "apex.main:main"

[project.urls]
Homepage = "https://apex-ai.dev"
Documentation = "https://apex-ai.dev/docs"
Repository = "https://github.com/Ggboykxz/APEX"
Issues = "https://github.com/Ggboykxz/APEX/issues"
Changelog = "https://github.com/Ggboykxz/APEX/blob/main/CHANGELOG.md"
Sponsor = "https://github.com/sponsors/ggboykxz"

[tool.setuptools.packages.find]
where = ["."]
include = ["apex*"]

[tool.setuptools.package-data]
apex = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "mkdocs.yml",
    "scripts/*",
    "*.ps1",
    "*.sh",
    ".github/",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["apex"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false